--- a/public/style.scss
+++ b/public/style.scss
@@ -1,11 +1,25 @@
+@import "../node_modules/uikit/src/scss/variables-theme.scss";
+@import "../node_modules/uikit/src/scss/mixins-theme.scss";
+@import "../node_modules/uikit/src/scss/uikit-theme.scss";
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+$panel_height: 64px;
+
 iframe {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
+  position: absolute;
+  left: 0;
+  top: $panel_height;
+  width: 100%;
+  height: calc(100vh - #{$panel_height});
+}
+
+.panel {
+  display: flex;
+  justify-content: flex-end;
+  height: $panel_height;
+  padding: 13px;
+  border-bottom: 1px solid black;
 }
