--- a/public/style.scss
+++ b/public/style.scss
@@ -23,3 +23,28 @@ iframe {
   padding: 13px;
   border-bottom: 1px solid black;
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.8s all;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .div {
+    color: #fff;
+    fill: #fff;
+  }
+}
